--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-<<<<<<< HEAD
-
-.DS_Store
-CodingChallenges/.DS_Store
-p5/.DS_Store
-
-=======
-.DS_Store
->>>>>>> d76b8d71117fb9f575cb08bb05af48eeb2031fb0
+**/.DS_Store
